--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <title>StopWatch</title>
 </head>
 <body>
+<form name="clockform">
+    <h3>Время:
+        <input class="clock" name="clock" maxlength="12" value="00:00:00"></h3><br>
+        <input name="starter" type="button" value="Старт/Стоп" onclick="findTIME()">
+        <input name="reset" type="button" value="Сбросить всё" onclick="clearALL()">
 
-<h1><time>00:00:00</time></h1>
-<button id="str">Старт</button>
-<button id="stp">Стоп</button>
-<button id="clr">Сброс</button>
+         <p id="marker"></p>
+</form>
 
 <script src="js/time.js" type="text/javascript"> </script>
 </body>
