--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <form name="clockform">
     <h3>Время:
         <input class="clock" name="clock" maxlength="12" value="00:00:00"></h3><br>
-        <input name="starter" type="button" value="Старт/Стоп" onclick="findTIME()">
+        <input id="Метка" name="starter" type="button" value="Старт/Стоп" onclick="findTIME()">
         <input name="reset" type="button" value="Сбросить всё" onclick="clearALL()">
 
          <p id="marker"></p>
